# mx-template-sc

./: Cargo.toml  README.md  build.sh
common/structs/src/: lib.rs
interaction/: decode.sh  globals.devnet.sh  globals.mainnet.sh  run.sh  snippets.sh  view.sh
meta/: Cargo.toml
output/: template.abi.json  template_proxy.rs
src/: admin.rs  admins.rs  lib.rs  pause.rs  template.rs
src/constants/: mod.rs
src/errors/: mod.rs
src/structs/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
