[package]
name = "template"
version = "0.0.1"
authors = [ "Kostas Tzoumpas <tzoumpas.ks@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.64.0"

[dependencies.multiversx-sc-modules]
version = "0.64.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.64.0"